--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
 <h1>Este es mi nuevo sitio web con git hub pages </h1>
 <p>Fue realizado por Luimar Jaimes por la explicacion del curso de github</p>
 <p><img src="https://imgur.com/gallery/Sxa9VNj.gif" /></p>
+
+<body>
+    <table >
+    <caption>Contenido nutricional por cada 100 g de alimento.</caption>
+    <tr> <th>Alimento</th> <th>Calorías (kCal)</th> <th>Grasas (g)</th>
+    <th>Proteína (g)</th> <th>Carbohidratos (g)</th>
+    </tr>
+    <tr> <td>Arándano</td> <td>49</td> <td>0.2</td>
+    <td>0.4</td> <td>12.7</td>
+    </tr>
+    <tr> <td>Plátano</td> <td>90</td> <td>0.3</td>
+    <td>1.0</td> <td>23.5</td>
+    </tr>
+    <tr> <td>Cereza</td> <td>46</td> <td>0.4</td>
+    <td>0.9</td> <td>10.9</td>
+    </tr>
+    <tr> <td>Fresa</td> <td>37</td> <td>0.5</td>
+    <td>0.8</td> <td>8.3</td>
+    </tr>
+    </table>
+    </body>
