--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <p>Fue realizado por Luimar Jaimes por la explicacion del curso de github</p>
 <p><img src="https://imgur.com/gallery/Sxa9VNj.gif" /></p>
 
+<html>
+    <head>
+        <title>CURRICULUM LUIMAR JAIMES</title>
+        <link rel="stylesheet" href="cs/estilos.css" />
+    </head>
 <body>
     <table >
     <caption>Contenido nutricional por cada 100 g de alimento.</caption>
@@ -22,3 +27,29 @@
     </tr>
     </table>
     </body>
+    </html>
+
+    <html>
+    <head>
+        <title>BIENVENIDOS A HYPERBLOG 2.0</title>
+        <link rel="stylesheet" href="cs/estilos.css" />
+    </head>
+<body>
+    <div id="container">
+        <div id="cabecera">
+            <img id=logo src=imagenes/magallanes.png />
+            Hyperblog
+            <span id="tagline" >your first option in blogspot</span>
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>este es el p&aacute;rrafo de inicio donde debemos explicar las cosas incre&iacute;bles de las ramas</p>
+            <p><img src= "imagenes/WhatsApp Image 2020-04-08 at 9.29.14 PM.jpeg" width="100%"/> </p>
+            <p>Los blogs son la mejor manera de compartir información y tus ideas.</p>
+           <p><a href="https://imgur.com/1nFojOl"><img src="https://i.imgur.com/1nFojOl" width="100%" title="Prueba de imagen"/></a></p>
+            <p>SUSCRIBETE Y DALE LIKE</p>
+            <p>Luimar Jos&eacute; Jaimes Ram&iacute;rez</p>
+        </div>
+    </div>
+</body>
+</html>
