--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<h1>Este es mi nuevo sitio web con git hub pages </h1>
+<h1>CURRICULUM LUIMAR JAIMES </h1>
 <p>Fue realizado por Luimar Jaimes por la explicacion del curso de github</p>
 <p><img src="https://imgur.com/gallery/Sxa9VNj.gif" /></p>
 
 <html>
     <head>
-        <title>CURRICULUM LUIMAR JAIMES</title>
         <link rel="stylesheet" href="cs/estilos.css" />
     </head>
 <body>
@@ -27,13 +26,9 @@
     </tr>
     </table>
     </body>
-    </html>
+</html>
 
     <html>
-    <head>
-        <title>BIENVENIDOS A HYPERBLOG 2.0</title>
-        <link rel="stylesheet" href="cs/estilos.css" />
-    </head>
 <body>
     <div id="container">
         <div id="cabecera">
