--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>CURRICULUM LUIMAR JAIMES </h1>
 <p>Fue realizado por Luimar Jaimes por la explicacion del curso de github</p>
-<p><img src="https://imgur.com/gallery/Sxa9VNj.gif" /></p>
+<p><img src="https://imgur.com/t/gif/NKMLpVO"/></p>
 
 <html>
     <head>
