--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>CURRICULUM LUIMAR JAIMES </h1>
+<h1>CURRICULUM LUIMAR Y SHAKYRA </h1>
 <p>Fue realizado por Luimar Jaimes por la explicacion del curso de github</p>
 <p><img src="https://imgur.com/t/gif/NKMLpVO"/></p>
 
