--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<h1>CURRICULUM shakyra </h1>
+<h1>CURRICULUM SHAKYRA TORRES </h1>
 <p>Fue realizado por Luimar Jaimes por la explicacion del curso de github</p>
 <p><img src="https://imgur.com/t/gif/NKMLpVO"/></p>
+
+<!-- PRUEBA -->
 
 <html>
     <head>
